--- a/index.html
+++ b/index.html
@@ -245,12 +245,12 @@
         <section class="frame" aria-labelledby="online-broadcasts">
             <h2 class="frame__title" id="online-broadcasts">Онлайн-трансляции</h2>
 
-            <!-- <iframe
+            <iframe
                 height="611"
                 src="https://www.youtube.com/embed/gizHi3weWgo"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen
-            > -->
+            >
             </iframe>
         </section>
 
