--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
     <head>
             <meta charset="utf-8">
-            <title>Государственный музей изобразительных искусств имени А.С. Пушкина</title>
+            <title>Пушкинский музей</title>
             <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&#38;subset=latin,cyrillic-ext'>
             <link rel="stylesheet" href="css/styles.css">
             <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="main-header__top">
                 <a class="main-header__logo">
-                    <img src="img/logo.svg" width="200" height="42" alt="Государственный музей изобразительных искусств имени А.С. Пушкина">
+                    <img src="img/logo.svg" width="312" height="66" alt="Государственный музей изобразительных искусств имени А.С. Пушкина">
                 </a>
     
                 <div class="main-header__user-block">
@@ -24,7 +24,7 @@
                     </h2>
                     <form class="main-header__search" role="search">
                         <label class="visually-hidden" for="search">Поиск по сайту</label>
-                        <input class="main-header__search-input" type="search" required id="search">
+                        <input class="main-header__search-input" type="search" required id="search" placeholder="Поиск по сайту">
                         <button class="main-header__search-button" type="submit">
                             <span class="visually-hidden">Начать поиск по сайту</span>
                             <svg focusable="false" aria-hidden="true" width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -62,6 +62,9 @@
                 <a href="#" class="main-nav__link">Музей</a>
                 <a href="#" class="main-nav__link">Посетителям</a>
                 <a href="#" class="main-nav__link">Выставки и события</a>
+                <a href="#" class="main-nav__link">Купить билет</a>
+                <a href="#" class="main-nav__link">Стать другом</a>
+                <a href="#" class="main-nav__link">Онлайн-магазин</a>
             </nav>
 
             <section class="slider" aria-roledescription="carousel" aria-labelledby="slider">
@@ -105,13 +108,6 @@
                     </div>
                 </div>
             </section>
-
-            <nav class="main-nav" aria-labelledby="services-nav">
-                <span class="visually-hidden" id="services-nav">Навигация по услугам</span>
-                <a href="#" class="main-nav__link button">Купить билет</a>
-                <a href="#" class="main-nav__link button">Стать другом</a>
-                <a href="#" class="main-nav__link button"> Онлайн-магазин</a>
-            </nav>
         </div>
     </header>
 
@@ -254,7 +250,7 @@
             </iframe>
         </section>
 
-        <section class="frame" aria-labelledby="excursions">
+        <section class="frame frame--excursions" aria-labelledby="excursions">
             <h2 class="frame__title" id="excursions">Экскурсии и лекции в прямом эфире</h2>
 
             <p>
